Fixed alignment bug

--- a/assets/css/app.less
+++ b/assets/css/app.less
@@ -217,6 +217,8 @@ a {
 			width: inherit;
 			background: #f7f7f7;
 			z-index: 10;
+			padding: 20px;
+    		padding-bottom: 0;
 			padding-top: 20px;
 		}
 	.body-result {
